--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <link rel="stylesheet" href="src/index.css" />
-    <title>Weather App</title>
+    <title>Search Engine App</title>
 </head>
 <body>
     <div class="weather-app">
@@ -43,8 +43,8 @@
         </main>
         <footer>
             <a href="https://github.com/oksanakaur" target ="_blank"> Keolebogile Segoneco</a> code hosted on 
-            <a href="https://github.com/oksanakaur/Vanila-Weather-Search-Project" target ="_blank">GitHub</a> and website hosted on
-            <a href="https://weather-search-engine1.netlify.app/" target ="_blank"> Netlify</a>
+            <a href="https://github.com/oksanakaur/Search-Engine-App" target ="_blank">GitHub</a> and website hosted on
+            <a href="https://search-engine-shecodes-app.netlify.app/" target ="_blank"> Netlify</a>
         </footer>
     </div>
     
