Added basic search engine

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 type="search"
                 placeholder="Enter a city..."
                 required
+                id="search-form-input"
                 class="search-form-input"
                 id="search-input"
                 />
@@ -47,6 +48,6 @@
             <a href="https://search-engine-shecodes-app.netlify.app/" target ="_blank"> Netlify</a>
         </footer>
     </div>
-    
+    <script src="src/index.js"></script>
 </body>
 </html>
