--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <main>
             <div class="weather-app-data">
                 <div>
-                    <h1 class="weather-app-city" id="city">Bloemfontein</h1>
+                    <h1 class="weather-app-city" id="city"></h1>
                     <p class="weather-app-details">Tuesday 14:49, scattered clouds
                         <br />
                         Humidity:<strong>66%</strong> , Wind: <strong>3.13km/h</strong>
@@ -37,7 +37,7 @@
                     </div>
                     <div class="weather-app-temperature-container">
                     <div class="weather-app-icon">☀️</div>
-                    <div class="weather-app-temperature">12</div>
+                    <div class="weather-app-temperature" id="temperature">12</div>
                     <div class="weather-app-unit">°C</div> 
                     </div>
             </div>
