Injected more weather data

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <div class="weather-app-data">
                 <div>
                     <h1 class="weather-app-city" id="city"></h1>
-                    <p class="weather-app-details">Tuesday 14:49, scattered clouds
+                    <p class="weather-app-details"><span id=time> </span> <span id="description"> </span>
                         <br />
-                        Humidity:<strong>66%</strong> , Wind: <strong>3.13km/h</strong>
+                        Humidity: <strong id="humidity"></strong> , Wind: <strong id="wind-speed"></strong>
                     </p>
                     </div>
                     <div class="weather-app-temperature-container">
