Injected javascript for the icon

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </p>
                     </div>
                     <div class="weather-app-temperature-container">
-                    <div class="weather-app-icon">☀️</div>
+                        <div id="icon"></div>
                     <div class="weather-app-temperature" id="temperature">12</div>
                     <div class="weather-app-unit">°C</div> 
                     </div>
