Added the footer

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </div>
             </div>
         </main>
-        <footer>
+        <footer>This project was coded by 
             <a href="https://github.com/oksanakaur" target ="_blank"> Keolebogile Segoneco</a> code hosted on 
             <a href="https://github.com/oksanakaur/Search-Engine-App" target ="_blank">GitHub</a> and website hosted on
             <a href="https://search-engine-shecodes-app.netlify.app/" target ="_blank"> Netlify</a>
