Added basic html

--- a/index.html
+++ b/index.html
@@ -41,6 +41,20 @@
                     <div class="weather-app-unit">°C</div> 
                     </div>
             </div>
+            <div class="weather-forecast">
+                <div class="row">
+             <div class="col-2">
+                Thu
+                <img 
+                src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png"
+                alt=""
+                width="36" 
+                />
+                18° 12°
+             </div>
+             </div>   
+            </div>
+            
         </main>
         <footer>This project was coded by 
             <a href="https://github.com/oksanakaur" target ="_blank"> Keolebogile Segoneco</a> code hosted on 
